Modify application.yml file